--- a/style/globals.css
+++ b/style/globals.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-scrollbar {
+  scrollbar-width: none;  
+  scrollbar-color: #6b7280 #e5e7eb; /* Thumb and track colors */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0px; /* Width of the scrollbar */
+  height: 8px; /* Height for horizontal scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #6b7280; /* Thumb color */
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #e5e7eb; /* Track color */
+}
+
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
